--- a/MAWteam13/app/src/main/res/values/strings.xml
+++ b/MAWteam13/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MAWteam13</string>
+    <string name="title_activity_donor_reg">Donor_reg</string>
 </resources>
